--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.7
+minecraft_version=1.20.5
+yarn_mappings=1.20.5+build.1
+loader_version=0.15.10
 
 # Mod Properties
-mod_version=1.4
-maven_group=loedje
+mod_version=1.6
 archives_base_name=server_chat_log_history
 
 # Dependencies
-fabric_version=0.96.1+1.20.4
+fabric_version=0.97.6+1.20.5
+fabric_api_version=0.97.5+1.20.5
